# SN41-discord-bot

./: .gitignore  Dockerfile  README.md  code.py  docker-compose.production.yml  docker-compose.yml  env-example  goodbye_phrases.txt  main.py  pyproject.toml  requirements.txt
