[project]
name = "sn41-discord-bot"
version = "0.2.0"
description = "A Discord bot for SN41"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "discord-py[voice]>=2.6.4",
    "pytz>=2025.2",
    "audioop-lts>=0.2.2",
]
